--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
         "magento/module-sales": "100.0.*",
         "magento/module-checkout": "100.0.*",
         "magento/module-payment": "100.0.*",
-        "magento/framework": "100.0.*",
+        "magento/framework": "100.0.*"
     },
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "license": [
         "GPL-3.0"
     ],
