--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "esparks/module-paylike",
     "description": "Paylike integration with payment gateway magento 2",
     "require": {
-        "magento/module-sales": "100.0.*",
-        "magento/module-checkout": "100.0.*",
-        "magento/module-payment": "100.0.*"
+        "magento/module-sales": ">100.0.0",
+        "magento/module-checkout": ">100.0.0",
+        "magento/module-payment": ">100.0.0"
     },
     "type": "magento2-module",
     "version": "1.0.0",
