--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "type": "magento2-module",
     "version": "1.0.0",
     "license": [
-        "GPL-3.0"
+        "GPL-3.0-or-later"
     ],
     "autoload": {
         "files": [ "registration.php" ],
