Update structure for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,20 @@
 {
-  "name": "paylike/plugin-magento",
-  "description": "Paylike magento2 gateway development",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Ionut Calara",
-      "email": "ionut.calara@gmail.com"
-    }
-  ],
-  "prefer-stable": true,
-  "require": {
-    "php": "^7.1",
-    "lmc/steward": "dev-master",
-    "vlucas/phpdotenv": "^2.5"
-  },
-  "autoload": {
-    "psr-4": {
-      "Magento\\": "tests/",
-      "Config\\": "config/"
+    "name": "esparks/module-paylike",
+    "description": "Paylike integration with payment gateway magento 2",
+    "require": {
+        "magento/module-sales": ">100.0.0",
+        "magento/module-checkout": ">100.0.0",
+        "magento/module-payment": ">100.0.0"
     },
-    "files": [
-      "include/currencies.php",
-      "include/beforeLoad.php"
-    ]
-  },
-  "config": {
-    "platform": {
-      "php": "7.2"
+    "type": "magento2-module",
+    "version": "1.0.1",
+    "license": [
+        "GPL-3.0-or-later"
+    ],
+    "autoload": {
+        "files": [ "registration.php" ],
+        "psr-4": {
+            "Esparks\\Paylike\\": ""
+        }
     }
-  }
 }
