--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,11 @@
     "require": {
         "magento/module-sales": ">100.0.0",
         "magento/module-checkout": ">100.0.0",
-        "magento/module-payment": ">100.0.0"
+        "magento/module-payment": ">100.0.0",
+        "paylike/php-api": "^1.0.3"
     },
     "type": "magento2-module",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "license": [
         "GPL-3.0-or-later"
     ],
