--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ jobs:
           command: composer install --no-interaction
       - run:
           name: Install Selenium
-          command: ./vendor/bin/steward install 3.8.1 --no-interaction
+          command: SELENIUM_PATH=$(./vendor/bin/steward install 3.8.1 --no-interaction)
       - run:
           name: Start Selenium
-          command: java -jar selenium-server-standalone-3.8.1.jar -role hub -enablePassThrough false -log test-reports/selenium.log
+          command: java -jar $SELENIUM_PATH -role hub -enablePassThrough false -log test-reports/selenium.log
           background: true
       - run:
           name: Wait for Selenium
