--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
         auth:
           username: ionutderikon
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+    environment:
+      BROWSER: chrome
     steps:
       - checkout
       - run: mkdir test-reports
