--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: ./vendor/bin/steward install 3.14.0 --no-interaction
       - run:
           name: Start Selenium
-          command: java -jar /home/circleci/project/vendor/bin/selenium-server-standalone-3.14.0.jar -role hub -enablePassThrough false -log test-reports/selenium.log
+          command: java -jar /home/circleci/project/vendor/bin/selenium-server-standalone-3.14.0.jar -role hub -log test-reports/selenium.log
           background: true
       - run:
           name: Wait for Selenium
