--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,17 +16,17 @@ jobs:
           command: composer install --no-interaction
       - run:
           name: Install Selenium
-          command: ./vendor/bin/steward install 3.14.0 --no-interaction
+          command: ./vendor/bin/steward install 3.8.1 --no-interaction
       - run:
           name: Start Selenium
-          command: java -jar /home/circleci/project/vendor/bin/selenium-server-standalone-3.14.0.jar -role hub -log test-reports/selenium.log
+          command: java -jar /home/circleci/project/vendor/bin/selenium-server-standalone-3.8.1.jar -role hub -enablePassThrough false -log test-reports/selenium.log
           background: true
       - run:
           name: Wait for Selenium
-          command: until $(echo | nc localhost 4444); do sleep 1; echo Waiting for selenium-server to start...; done;
+          command: until $(echo | nc http://0.0.0.0 4444); do sleep 1; echo Waiting for selenium-server to start...; done;
       - run:
           name: Run quick tests
-          command: ./vendor/bin/steward run staging $BROWSER --group="magento_quick_test" -vv
+          command: ./vendor/bin/steward run staging $BROWSER --group="magento_quick_test" -vv --server-url=http://0.0.0.0:4444
       - run:
           name: Check test results
           command: ./vendor/bin/steward results -vvv
