--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: ./vendor/bin/steward install 3.8.1 --no-interaction
       - run:
           name: Download Chrome Driver
-          command: curl -O https://chromedriver.storage.googleapis.com/2.36/chromedriver_linux64.zip
+          command: mkdir chromedriver; wget -q -t 3 https://chromedriver.storage.googleapis.com/2.36/chromedriver_linux64.zip; unzip chromedriver_linux64 -d chromedriver; export CHROMEDRIVER_PATH=./chromedriver/chromedriver
       - run:
           name: Extract Chrome Zip
           command: jar xf chromedriver_linux64.zip
