--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,10 @@ jobs:
           command: ./vendor/bin/steward install 3.14.0 --no-interaction
       - run:
           name: Download Chrome Driver
-          command: mkdir chromedriver; wget -q -t 3 https://chromedriver.storage.googleapis.com/2.40.565386/chromedriver_linux64.zip; unzip chromedriver_linux64 -d chromedriver; export CHROMEDRIVER_PATH=./chromedriver/chromedriver
+          command: mkdir chromedriver; wget -q -t 3 https://chromedriver.storage.googleapis.com/2.40/chromedriver_linux64.zip; unzip chromedriver_linux64 -d chromedriver; export CHROMEDRIVER_PATH=./chromedriver/chromedriver
       - run:
           name: Start Selenium
-          command: java -jar ./vendor/bin/selenium-server-standalone-3.8.1.jar -log test-reports/selenium.log
+          command: java -jar ./vendor/bin/selenium-server-standalone-3.14.0.jar -log test-reports/selenium.log
           background: true
       - run: sleep 10
       - run:
