--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,5 +29,11 @@ jobs:
           name: Run quick tests
           command: ./vendor/bin/steward run staging $BROWSER --group="magento_quick_test" -vv
       - run:
+          name: Run full tests
+          command: ./vendor/bin/steward run staging $BROWSER --group="magento_full_test" -vv
+      - run:
+          name: Log Results
+          command: ./vendor/bin/steward run staging $BROWSER --group="magento_version_log" -vv
+      - run:
           name: Check test results
           command: ./vendor/bin/steward results -vvv
