--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,44 @@
-version: 2
-jobs:
+# to use orbs, must use version >= 2.1
+version: 2.1
+orbs:
+  # import Cypress orb by specifying an exact version x.y.z
+  # or the latest version 1.x.x using "@1" syntax
+  cypress: cypress-io/cypress@1
+workflows:
   build:
-    docker:
-      - image: circleci/php:7.1-node-browsers
-        auth:
-          username: ionutderikon
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-    environment:
-      BROWSER: chrome
-    steps:
-      - checkout
-      - run: mkdir test-reports
-      - run:
-          name: Install Composer
-          command: composer install --no-interaction
-      - run:
-          name: Install Selenium
-          command: ./vendor/bin/steward install 3.8.1 --no-interaction
-      - run:
-          name: Download Chrome Driver
-          command: mkdir chromedriver; wget -q -t 3 https://chromedriver.storage.googleapis.com/78.0.3904.105/chromedriver_linux64.zip; unzip chromedriver_linux64 -d chromedriver; export CHROMEDRIVER_PATH=./chromedriver/chromedriver
-      - run:
-          name: Start Selenium
-          command: java -jar ./vendor/bin/selenium-server-standalone-3.8.1.jar -enablePassThrough false -log test-reports/selenium.log
-          background: true
-      - run: sleep 10
-      - run:
-          name: Run quick tests
-          command: ./vendor/bin/steward run staging $BROWSER --group="magento_quick_test" -vv
-      - store_artifacts:
-          path: /home/circleci/project/logs
-      - run:
-          name: Run full tests
-          command: ./vendor/bin/steward run staging $BROWSER --group="magento_full_test" -vv
-      - run:
-          name: Log Results
-          command: ./vendor/bin/steward run staging $BROWSER --group="magento_version_log" -vv
-      - run:
-          name: Check test results
-          command: ./vendor/bin/steward results -vvv
+    jobs:
+      # "cypress" is the name of the imported orb
+      # "run" is the name of the job defined in Cypress orb
+      - cypress/run:
+          name: Run_QUICK_tests
+          context:
+            - paylike
+          spec: cypress/integration/quick_test.js
+          filters:
+            branches:
+              only:
+                - master
+      - cypress/run:
+          name: Run_FULL_tests
+          requires:
+            - Run_QUICK_tests
+          context:
+            - paylike
+          spec: cypress/integration/full_test.js
+          filters:
+            branches:
+              only:
+                - master
+      # the following must run after all test passed
+      # to show latest supported version in repository readme.md file
+      - cypress/run:
+          name: Run_LOG_VERSION_remotely
+          requires:
+            - Run_FULL_tests
+          context:
+            - paylike
+          spec: cypress/integration/log_version.js
+          filters:
+            branches:
+              only:
+                - master
